fixed rendering before data bug; added an expand-collapse bootstrap button for vegetable list; made the vegetable list a responsive grid when expanded

--- a/frontend/static/src/components/Main/Profile/GardenDetail.css
+++ b/frontend/static/src/components/Main/Profile/GardenDetail.css
@@ -1,3 +1,18 @@
 .garden-detail {
     text-align: left;
 }
+
+.garden-detail-spinner {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
+
+.garden-detail-vegetable-grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
+}
+
+.garden-detail-vegetable {
+    border: 1px solid green;
+    width: 450px;
+}
